# auth/api/token/token.go
@@ -1,77 +1,0 @@
-package token
-
-import (
-	"errors"
-	"fmt"
-	"log"
-	"time"
-
-	"github.com/golang-jwt/jwt"
-	pb "github.com/Mubinabd/project_control/internal/genproto/auth"
-	"golang.org/x/crypto/bcrypt"
-)
-
-const signingKey = "secret_key"
-
-func GenerateJWTToken(user *pb.User) (string, string) {
-	accessToken := jwt.New(jwt.SigningMethodHS256)
-	refreshToken := jwt.New(jwt.SigningMethodHS256)
-
-	claims := accessToken.Claims.(jwt.MapClaims)
-	claims["user_id"] = user.Id
-	claims["email"] = user.Email
-	claims["role"] = user.Role
-	claims["iat"] = time.Now().Unix()
-	claims["exp"] = time.Now().Add(180 * time.Minute).Unix()
-	access, err := accessToken.SignedString([]byte(signingKey))
-	if err != nil {
-		log.Fatal("error while generating access token: ", err)
-	}
-
-	rftClaims := refreshToken.Claims.(jwt.MapClaims)
-	rftClaims["user_id"] = user.Id
-	claims["email"] = user.Email
-	claims["role"] = user.Role
-	rftClaims["iat"] = time.Now().Unix()
-	rftClaims["exp"] = time.Now().Add(48 * time.Hour).Unix()
-	refresh, err := refreshToken.SignedString([]byte(signingKey))
-	if err != nil {
-		log.Fatal("error while generating refresh token: ", err)
-	}
-
-
-	return access, refresh
-}
-
-func ValidateToken(tokenStr string) (bool, error) {
-	_, err := ExtractClaim(tokenStr)
-	if err != nil {
-		return false, err
-	}
-	return true, nil
-}
-
-func ExtractClaim(tokenStr string) (jwt.MapClaims, error) {
-	token, err := jwt.Parse(tokenStr, func(token *jwt.Token) (interface{}, error) {
-		return []byte(signingKey), nil
-	})
-	if err != nil {
-		return nil, fmt.Errorf("parsing token: %w", err)
-	}
-
-	if !token.Valid {
-		return nil, errors.New("invalid token")
-	}
-
-	claims, ok := token.Claims.(jwt.MapClaims)
-	if !ok {
-		return nil, errors.New("invalid token claims")
-	}
-
-	return claims, nil
-}
-
-func HashPassword(password string) (string, error) {
-	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
-	return string(bytes), err
-}
