# project_control/api/handlers/auth.go
@@ -10,14 +10,14 @@ import (
 	"sync"
 	"time"
 
-	"github.com/go-redis/redis"
 	t "github.com/Mubinabd/project_control/api/token"
-	"github.com/Mubinabd/project_control/internal/genproto/auth"
+	"github.com/Mubinabd/project_control/pkg/genproto/auth"
+	"github.com/go-redis/redis/v8"
 	"golang.org/x/exp/slog"
 
-	"github.com/gin-gonic/gin"
 	md "github.com/Mubinabd/project_control/api/middleware"
 	"github.com/Mubinabd/project_control/pkg/email"
+	"github.com/gin-gonic/gin"
 )
 
 var (
@@ -153,7 +153,7 @@ func (h *Handlers) LoginUser(c *gin.Context) {
 	c.JSON(http.StatusOK, auth.LoginRes{
 		AccessToken:  token,
 		RefreshToken: refToken,
-		Role: res.Role,
+		Role:         res.Role,
 	})
 }
 
@@ -264,7 +264,6 @@ func isValidEmail(email string) bool {
 	return re.MatchString(email)
 }
 
-
 // @Summary 		Get all users
 // @Description     Get all users
 // @Tags       	    auth
@@ -284,7 +283,7 @@ func (h *Handlers) GetAllUsers(c *gin.Context) {
 	offset := c.Query("offset")
 	username := c.Query("username")
 	fullName := c.Query("full_name")
-	
+
 	limitValue := 10
 	offsetValue := 0
 
@@ -297,7 +296,7 @@ func (h *Handlers) GetAllUsers(c *gin.Context) {
 		}
 		limitValue = parsedLimit
 	}
-	
+
 	if offset != "" {
 		parsedOffset, err := strconv.Atoi(offset)
 		if err != nil {
@@ -307,7 +306,7 @@ func (h *Handlers) GetAllUsers(c *gin.Context) {
 		}
 		offsetValue = parsedOffset
 	}
-	
+
 	req := &auth.ListUserReq{
 		Username: username,
 		FullName: fullName,
@@ -316,14 +315,14 @@ func (h *Handlers) GetAllUsers(c *gin.Context) {
 			Offset: int32(offsetValue),
 		},
 	}
-	
+
 	res, err := h.Auth.GetAllUsers(context.Background(), req)
 	if err != nil {
 		slog.Error("failed to get all users: %v", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err})
 		return
 	}
-	
+
 	c.JSON(http.StatusOK, res)
 }
 
